--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         
         // Credenciales de administradores
         const ADMINS = [
-          { nombre: 'Lucas', email: 'lucas@ferni.com', password: 'ferni2025' },
-          { nombre: 'Gastón Rivero', email: 'gaston@ferni.com', password: 'ferni2025' }
+          { nombre: 'Lucas', email: 'lucas.ramirez2210@gmail.com', password: 'ferni2025' },
+          { nombre: 'Gastón Rivero', email: 'gastonrivero043@gmail.com', password: 'ferni2025' }
         ];
         
         // Las 9 sucursales
@@ -433,9 +433,9 @@
 
                       <div className="mt-4 p-3 bg-blue-50 rounded-lg">
                         <p className="text-xs text-blue-800">
-                          <strong>Credenciales de prueba:</strong><br/>
-                          lucas@ferni.com / ferni2025<br/>
-                          gaston@ferni.com / ferni2025
+                          <strong>Credenciales de administrador:</strong><br/>
+                          lucas.ramirez2210@gmail.com / ferni2025<br/>
+                          gastonrivero043@gmail.com / ferni2025
                         </p>
                       </div>
                     </div>
