--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         ];
 
         const CATEGORIAS = [
-          { id: 'visual', nombre: 'Visual Merchandising', color: '#FF6B35', icon: '🏪' },
+          { id: 'visual', nombre: 'Exhibiciones', color: '#FF6B35', icon: '🎯' },
           { id: 'limpieza', nombre: 'Limpieza y Orden', color: '#4ECDC4', icon: '🧹' },
           { id: 'mantenimiento', nombre: 'Mantenimiento', color: '#FFA07A', icon: '🔧' },
           { id: 'inventario', nombre: 'Inventario', color: '#9B59B6', icon: '📦' },
