--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         ];
 
         const CATEGORIAS = [
-          { id: 'visual', nombre: 'Visual Merchandising', color: '#FF6B35', icon: '🏪' },
-          { id: 'limpieza', nombre: 'Limpieza y Orden', color: '#4ECDC4', icon: '🧹' },
-          { id: 'mantenimiento', nombre: 'Mantenimiento', color: '#FFA07A', icon: '🔧' },
-          { id: 'inventario', nombre: 'Inventario', color: '#9B59B6', icon: '📦' },
-          { id: 'ambiental', nombre: 'Mejoras Ambientales', color: '#27AE60', icon: '♻️' }
+          { id: 'visual', nombre: 'Exhibiciones', color: '#000000', icon: '🎯' },
+          { id: 'limpieza', nombre: 'Limpieza y Orden', color: '#000000', icon: '🧹' },
+          { id: 'mantenimiento', nombre: 'Mantenimiento', color: '#000000', icon: '🔧' },
+          { id: 'inventario', nombre: 'Inventario', color: '#000000', icon: '📦' },
+          { id: 'ambiental', nombre: 'Mejoras Ambientales', color: '#000000', icon: '♻️' }
         ];
 
         // ========================================
