--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
           const [sucursalActiva, setSucursalActiva] = useState(null);
           const [esAdmin, setEsAdmin] = useState(false);
           const [reportes, setReportes] = useState([]);
+          const [reportesNuevos, setReportesNuevos] = useState([]);
+          const [contadorNuevos, setContadorNuevos] = useState(0);
           const [filtroEstado, setFiltroEstado] = useState('todos');
           const [reporteActual, setReporteActual] = useState(null);
           const [cargando, setCargando] = useState(false);
@@ -217,19 +219,47 @@
           useEffect(() => {
             if (!usuario || !sucursalActiva) return;
 
+            // Obtener timestamp de última visita
+            const ultimaVisitaKey = `ultimaVisita_${sucursalActiva}`;
+            const ultimaVisita = localStorage.getItem(ultimaVisitaKey);
+            const timestampUltimaVisita = ultimaVisita ? new Date(ultimaVisita) : new Date(0);
+
             let query = db.collection('reportes');
             if (sucursalActiva !== 'TODAS') {
               query = query.where('sucursal', '==', sucursalActiva);
             }
 
+            let primeraVez = true;
+
             const unsubscribe = query.onSnapshot((snapshot) => {
               const data = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+              
               // Ordenar por fecha_creacion DESC en JavaScript
               data.sort((a, b) => {
                 const fa = getFecha(a.fecha_creacion) || new Date(0);
                 const fb = getFecha(b.fecha_creacion) || new Date(0);
                 return fb - fa;
               });
+
+              // Contar reportes nuevos desde última visita
+              const nuevos = data.filter(r => {
+                const fecha = getFecha(r.fecha_creacion);
+                return fecha && fecha > timestampUltimaVisita;
+              });
+              setContadorNuevos(nuevos.length);
+
+              // Detectar reportes que acaban de llegar (solo después de primera carga)
+              if (!primeraVez) {
+                const idsAnteriores = new Set(reportes.map(r => r.id));
+                const recienLlegados = data.filter(r => !idsAnteriores.has(r.id)).map(r => r.id);
+                setReportesNuevos(recienLlegados);
+                // Quitar highlight después de 5 segundos
+                if (recienLlegados.length > 0) {
+                  setTimeout(() => setReportesNuevos([]), 5000);
+                }
+              }
+              primeraVez = false;
+
               setReportes(data);
             });
 
@@ -321,12 +351,34 @@
             const reportesFiltrados = reportes.filter(r => filtroEstado === 'todos' || r.estado === filtroEstado);
             const sucursalNombre = sucursalActiva === 'TODAS' ? 'Todas las Sucursales' : SUCURSALES.find(s => s.id === sucursalActiva)?.nombre || sucursalActiva;
 
+            // Marcar como visto al interactuar
+            const marcarVisto = () => {
+              const ultimaVisitaKey = `ultimaVisita_${sucursalActiva}`;
+              localStorage.setItem(ultimaVisitaKey, new Date().toISOString());
+              setContadorNuevos(0);
+            };
+
+            // Auto-marcar después de 3 segundos si hay nuevos
+            useEffect(() => {
+              if (contadorNuevos > 0) {
+                const timer = setTimeout(marcarVisto, 3000);
+                return () => clearTimeout(timer);
+              }
+            }, [contadorNuevos]);
+
             return (
               <div className="min-h-screen bg-gray-50">
                 <div className="bg-gradient-to-r from-blue-600 to-indigo-600 text-white p-6 shadow-lg">
                   <div className="flex justify-between items-start mb-4">
                     <div className="flex-1">
-                      <h1 className="text-2xl font-bold mb-1">FERNI Incidencias</h1>
+                      <div className="flex items-center gap-3 mb-1">
+                        <h1 className="text-2xl font-bold">FERNI Incidencias</h1>
+                        {contadorNuevos > 0 && (
+                          <span className="bg-red-500 text-white text-xs font-bold px-2 py-1 rounded-full animate-pulse">
+                            {contadorNuevos} nuevo{contadorNuevos > 1 ? 's' : ''}
+                          </span>
+                        )}
+                      </div>
                       <p className="text-blue-100 text-sm">Hola, {usuario} {esAdmin && '👑'}</p>
                       
                       {esAdmin ? (
@@ -377,10 +429,17 @@
                     reportesFiltrados.map(reporte => {
                       const categoria = CATEGORIAS.find(c => c.id === reporte.categoria);
                       const sucursal = SUCURSALES.find(s => s.id === reporte.sucursal);
+                      const esNuevo = reportesNuevos.includes(reporte.id);
                       return (
-                        <div key={reporte.id} onClick={() => { setReporteActual(reporte); setVista('detalle'); }} className="bg-white rounded-lg p-4 shadow hover:shadow-md transition cursor-pointer" style={{ borderLeft: `4px solid ${categoria?.color}` }}>
+                        <div 
+                          key={reporte.id} 
+                          onClick={() => { setReporteActual(reporte); setVista('detalle'); marcarVisto(); }} 
+                          className={`bg-white rounded-lg p-4 shadow hover:shadow-md transition cursor-pointer ${esNuevo ? 'ring-2 ring-green-400 animate-pulse' : ''}`} 
+                          style={{ borderLeft: `4px solid ${categoria?.color}` }}
+                        >
                           <div className="flex justify-between items-start mb-2">
                             <div className="flex items-center gap-2 flex-1">
+                              {esNuevo && <span className="text-green-500 text-xl">✨</span>}
                               <span className="text-2xl">{categoria?.icon}</span>
                               <div className="flex-1">
                                 <div className="font-semibold text-gray-800">{categoria?.nombre}</div>
@@ -719,11 +778,28 @@
             const topResolvedores = Object.entries(resolvedores).sort((a, b) => b[1] - a[1]).slice(0, 5);
 
             return (
-              <div className="min-h-screen bg-gray-50">
-                <div className="bg-gradient-to-r from-blue-600 to-indigo-600 text-white p-6">
-                  <button onClick={() => setVista('lista')} className="mb-4 text-blue-100 hover:text-white">← Volver</button>
+              <div className="min-h-screen bg-gray-50" id="dashboard-container">
+                <div className="bg-gradient-to-r from-blue-600 to-indigo-600 text-white p-6 no-print">
+                  <div className="flex justify-between items-center mb-4">
+                    <button onClick={() => setVista('lista')} className="text-blue-100 hover:text-white">← Volver</button>
+                    <button 
+                      onClick={() => window.print()} 
+                      className="bg-white/20 hover:bg-white/30 px-4 py-2 rounded-lg transition text-sm flex items-center gap-2"
+                    >
+                      🖨️ Imprimir / Descargar PDF
+                    </button>
+                  </div>
                   <h1 className="text-2xl font-bold mb-2">📊 Dashboard</h1>
                   <p className="text-blue-100">{sucursalActiva === 'TODAS' ? 'Todas las Sucursales' : SUCURSALES.find(s => s.id === sucursalActiva)?.nombre}</p>
+                </div>
+
+                {/* Header para impresión */}
+                <div className="print-only hidden">
+                  <div className="text-center mb-6 pb-4 border-b-2 border-gray-300">
+                    <h1 className="text-3xl font-bold text-gray-900 mb-2">FERNI - Dashboard de Incidencias</h1>
+                    <p className="text-lg text-gray-600">{sucursalActiva === 'TODAS' ? 'Todas las Sucursales' : SUCURSALES.find(s => s.id === sucursalActiva)?.nombre}</p>
+                    <p className="text-sm text-gray-500 mt-2">Generado el {new Date().toLocaleDateString('es-AR', { day:'2-digit', month:'long', year:'numeric', hour:'2-digit', minute:'2-digit' })}</p>
+                  </div>
                 </div>
 
                 <div className="p-6 space-y-6">
@@ -849,6 +925,65 @@
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
+        }
+
+        /* Estilos para impresión */
+        @media print {
+            /* Ocultar elementos de navegación */
+            .no-print {
+                display: none !important;
+            }
+
+            /* Mostrar header especial para impresión */
+            .print-only {
+                display: block !important;
+            }
+
+            /* Optimizar página */
+            body {
+                background: white !important;
+            }
+
+            #dashboard-container {
+                background: white !important;
+                min-height: auto !important;
+            }
+
+            /* Evitar saltos de página dentro de elementos */
+            .bg-white {
+                page-break-inside: avoid;
+                break-inside: avoid;
+            }
+
+            /* Ajustar márgenes y padding para impresión */
+            .p-6 {
+                padding: 1rem !important;
+            }
+
+            /* Asegurar que los colores se impriman */
+            * {
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+
+            /* Ajustar tamaños de fuente para papel */
+            .text-3xl {
+                font-size: 1.5rem !important;
+            }
+
+            .text-2xl {
+                font-size: 1.25rem !important;
+            }
+
+            .text-xl {
+                font-size: 1.1rem !important;
+            }
+
+            /* Agregar bordes sutiles para mejor legibilidad */
+            .shadow {
+                box-shadow: none !important;
+                border: 1px solid #e5e7eb !important;
+            }
         }
     </style>
 </body>
